--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </div>
   <div class="textContainer">
     <h1>Pizza!</h1>
+    <p> I love Pizza . Pizza is one of my favourite craving.</p> 
     <p>My Favorite Toppings: </p>
     <ul>
       <li>Pepperoni</li>
